--- a/custom_components/arris_dcx960/manifest.json
+++ b/custom_components/arris_dcx960/manifest.json
@@ -1,18 +1,15 @@
 {
   "domain": "arris_dcx960",
   "name": "Arris DCX960",
-  "config_flow": true,
-  "documentation": "https://github.com/Sholofly/arrisdcx960",
-  "requirements": [
-    "ziggonext==0.12.7"
-  ],
-  "ssdp": [],
-  "zeroconf": [],
-  "homekit": {},
-  "dependencies": [],
+  "documentation": "https://github.com/Sholofly/arrisdcx960",  
+  "issue_tracker": "https://github.com/Sholofly/arrisdcx960/issues",
   "codeowners": [
     "@Sholofly"
   ],
   "iot_class": "cloud_push",
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "config_flow": true,
+  "requirements": [
+    "ziggonext==0.12.7"
+  ]
 }
